includedir = $(prefix)/include/libidmefv2

include_HEADERS = common.h			\
		  idmefv2.h			\
		  idmefv2-additional-data.h	\
		  idmefv2-class.h			\
		  idmefv2-criteria.h		\
		  idmefv2-criterion-value.h	\
		  idmefv2-data.h			\
		  idmefv2-message-helpers.h	\
		  idmefv2-message-id.h		\
		  idmefv2-message-print.h		\
		  idmefv2-message-write.h		\
		  idmefv2-message-print-json.h		\
		  idmefv2-object.h		\
		  idmefv2-path.h			\
		  idmefv2-time.h			\
		  idmefv2-tree-data.h		\
		  idmefv2-tree-wrap.h		\
		  idmefv2-value.h			\
		  idmefv2-value-type.h		\
		  libidmefv2-extract.h		\
		  libidmefv2-hash.h		\
		  libidmefv2-linked-object.h	\
		  libidmefv2-list.h		\
		  libidmefv2-log.h			\
		  libidmefv2-failover.h		\
		  libidmefv2-ident.h		\
		  libidmefv2-io.h			\
		  libidmefv2-macros.h		\
		  libidmefv2-message-id.h		\
		  libidmefv2-string.h

nodist_include_HEADERS = libidmefv2-inttypes.h

noinst_HEADERS = idmefv2-object-prv.h libmissing.h idmefv2-tree-data.h variable.h ntp.h

-include $(top_srcdir)/git.mk
